refactor: organize packages